--- a/projects/web/app/views/adm/ExecutorController/show.html
+++ b/projects/web/app/views/adm/ExecutorController/show.html
@@ -50,7 +50,7 @@
             #{field 'object.commandLine'}
                 <label for="${field.id}">&{field.name}</label>
                 <div class="form-group row ${field.errorClass ? 'has-error' : ''}">
-                    <label id="applicationLabel" style="font-weight: normal !important;${object.executionScriptEnabled ? '' : 'display: none;'}">application.sh</label>
+                    <label id="applicationLabel" style="font-weight: normal !important;${object.executionScriptEnabled ? '' : 'display: none;'}">${common.constants.SystemConstants.DEFAULT_APP_SCRIPT}</label>
                     <input id="${field.id}" class="form-control" type="text" name="${field.name}" value="${field.value}" />
 
                     #{ifError field.name}
