--- a/projects/web/app/views/guest/InstanceController/blank.html
+++ b/projects/web/app/views/guest/InstanceController/blank.html
@@ -23,7 +23,7 @@
     <div class="form-group row ${field.errorClass ? 'has-error' : ''}">
         <label for="${field.id}">&{field.name}</label>
         <div class="nav-container">
-            <select class="form-control nav" id="${field.id}" name="${pName}">
+            <select class="form-control nav" id="${field.id}" name="${field.name}.id">
                 <option value="">&{'crud.selectValue'}</option>
                 %{ models.ExecutorModel.findAll().each() { }%
                 %{
@@ -327,7 +327,7 @@
     <div class="col-md-7 col-md-offset-1 no-bootstrap-padding">                    
         <label style="font-weight: normal;">&{'applicationArguments.file'}</label>
         <div class="nav-container">
-            <select name="${field.name}[]" id="${field.id}" class="form-control nav select-file-input">
+            <select name="${field.name}" id="${field.id}" class="form-control nav select-file-input">
                 <option value="">&{'crud.none'}</option>
             </select>
         </div>
@@ -335,12 +335,12 @@
 </div>
 #{/field}
 
-#{field 'applicationOutputFiles'}
 <div style="display:none;" id="divOutputTemplate" class="form-group row">
     <div class="col-md-4 no-bootstrap-padding">                    
         <label style="font-weight: normal;">&{'applicationArguments.space'}</label>
         <div class="nav-container">
-            <select name="${field.name}[].spaceId" class="form-control nav select-space-output">
+            #{field 'applicationOutputFileSpaces'}
+            <select name="${field.name}" class="form-control nav select-space-output">
                 <option value="">&{'crud.none'}</option>
                 %{ listSpaces.each() { }%
                 %{
@@ -349,18 +349,17 @@
                 <option value="${it.id}" ${selected ? 'selected="true"'.raw() : ''}>${it.name}</option>
                 %{ } }%
             </select>
+            #{/field}
         </div>
     </div>
     
     <div class="col-md-7 col-md-offset-1 no-bootstrap-padding">                    
-        <label style="font-weight: normal;">&{'applicationArguments.file'}</label>
-        <input name="${field.name}[].name" class="form-control name-file-output" type="text" value="" />
-        #{ifError field.name}
-            <span id="helpBlock2" class="help-block">${field.error.raw()}</span>
-        #{/ifError}                       
+        <label style="font-weight: normal;">&{'applicationArguments.file'}</label>        
+        #{field 'applicationOutputFileNames'}
+        <input disabled name="${field.name}" class="form-control name-file-output" type="text" value="" />
+        #{/field}                    
     </div>
 </div>
-#{/field}
 
 #{set 'moreScripts' }
 <script type="text/javascript">
@@ -558,9 +557,10 @@ $(function(){
         var commandLine = $('#commandLine').data('command-line');      
         
         // Replace option arguments
-        var arguments = $('#applicationArguments').val();        
-        commandLine = commandLine.replace("{a}", arguments);
-        
+        var arguments = $('#applicationArguments').val();      
+        if(arguments) {
+            commandLine = commandLine.replace("{a}", arguments);
+        }
         // Replace input file arguments
         $('.select-file-input').each(function(){ 
             var selectedFile = $(this).val();     
@@ -568,14 +568,18 @@ $(function(){
             if(selectedFile != "") {
                 fileName = $(this).find(":selected").text().trim();
             }
-            commandLine = commandLine.replace(/\{i\}/, fileName);   
+            if(fileName){
+                commandLine = commandLine.replace(/\{i\}/, fileName);
+            }
         });
         commandLine = commandLine.replace(/\{i\}/g, "");  
 
         // Replace output file arguments
         $('.name-file-output').each(function(){ 
             var fileName = $(this).val();     
-            commandLine = commandLine.replace(/\{o\}/, fileName);   
+            if(fileName){
+                commandLine = commandLine.replace(/\{o\}/, fileName);  
+            }
         });
         commandLine = commandLine.replace(/\{o\}/g, "");  
         
@@ -613,6 +617,9 @@ $(function(){
             $(this).closest('.divOutputTemplateClass').remove();
         }          
         addEmptyOutput();
+        var fileName = 
+        	$(this).closest('.divOutputTemplateClass').find('.name-file-output');
+        fileName.prop("disabled", false);        
     });
 
     $('.select-file-input').change(function(){      
