--- a/projects/web/app/views/guest/WorkflowController/blank.html
+++ b/projects/web/app/views/guest/WorkflowController/blank.html
@@ -15,14 +15,14 @@
 
     <label>&{'workflow.editor'}</label>
     
-    <div class="btn-toolbar margin-bottom" role="toolbar" aria-label="Toolbar with button groups">
+    <div class="btn-toolbar margin-bottom" role="toolbar">
         <div class="btn-group" role="group">
-            <button type="button" class="btn btn-secondary">
+            <button id="buttonNewInstance" type="button" class="btn btn-secondary draggable_operator ui-draggable ui-draggable-handle">
                 <span class="glyphiconglyphicon glyphicon glyphicon-screenshot"></span>
             </button>
         </div>
         <div class="btn-group" role="group">
-            <button type="button" class="btn btn-secondary">
+            <button type="button" class="btn btn-secondary delete_selected_button">
                 <span class="glyphiconglyphicon glyphicon glyphicon-remove"></span>
             </button>
         </div>
@@ -140,6 +140,29 @@ $container.on('mousewheel.focal', function( e ) {
         focal: e
     });
 });
+
+function getOperatorData(title) {
+  var data = {
+    properties: {
+      title: title,
+      inputs: {
+          ins: {
+              label: '.',
+              multiple: true
+          }
+      },
+      outputs: {
+          outs: {
+              label: ".",
+              multiple: true
+          }
+      }
+    } 
+  };
+  
+  return data;
+}
+
 var data = {
     operators: {
         start_operator: {
@@ -216,46 +239,20 @@ $flowchart.flowchart({
   data: data
 });
 
-
-
 $flowchart.flowchart('addClassOperator', 'start_operator', 'terminal-operator');
 $flowchart.flowchart('addClassOperator', 'end_operator', 'terminal-operator');
 
-$flowchart.parent().siblings('.delete_selected_button').click(function() {
+$('.delete_selected_button').click(function() {
   $flowchart.flowchart('deleteSelected');
 });
 
-
 var $draggableOperators = $('.draggable_operator');
 
-function getOperatorData($element) {
-  var nbInputs = parseInt($element.data('nb-inputs'));
-  var nbOutputs = parseInt($element.data('nb-outputs'));
-  var data = {
-    properties: {
-      title: $element.text(),
-      inputs: {},
-      outputs: {}
-    } 
-  };
-  
-  var i = 0;
-  for (i = 0; i < nbInputs; i++) {
-    data.properties.inputs['input_' + i] = {
-      label: 'Input ' + (i + 1)
-    };
-  }
-  for (i = 0; i < nbOutputs; i++) {
-    data.properties.outputs['output_' + i] = {
-      label: 'Output ' + (i + 1)
-    };
-  }
-  
-  return data;
-}
 
 var operatorId = 0;
-    
+
+$('#buttonNewInstance').draggable({cancel:false});
+
 $draggableOperators.draggable({
     cursor: "move",
     opacity: 0.7,
@@ -266,7 +263,7 @@ $draggableOperators.draggable({
     
     helper: function(e) {
       var $this = $(this);
-      var data = getOperatorData($this);
+      var data = getOperatorData("Operator Normal");
       return $flowchart.flowchart('getOperatorElement', data);
     },
     stop: function(e, ui) {
@@ -287,7 +284,7 @@ $draggableOperators.draggable({
             relativeLeft /= positionRatio;
             relativeTop /= positionRatio;
             
-            var data = getOperatorData($this);
+            var data = getOperatorData("Operator Normal");
             data.left = relativeLeft;
             data.top = relativeTop;
             
